--- a/Dark Mode/html/css/menu/Servers.css
+++ b/Dark Mode/html/css/menu/Servers.css
@@ -10,18 +10,21 @@
 .gamemode {
   margin-right: 5px;
   margin-bottom: 5px;
-  background-color: #111; /* #EFEFEF */
+  background-color: #111;
+  /* #EFEFEF */
   padding: 5px 20px;
   border-radius: 3px;
   cursor: pointer;
   position: relative;
   height: 34px;
   overflow: hidden;
-  background-image: -webkit-linear-gradient(bottom, rgb(25, 25, 25) 1%, rgb(25, 25, 25) 99%); /* -webkit-linear-gradient(bottom, rgb(230,230,230) 1%, rgb(240,240,240) 99%) */
+  background-image: -webkit-linear-gradient(bottom, rgb(25, 25, 25) 1%, rgb(25, 25, 25) 99%);
+  /* -webkit-linear-gradient(bottom, rgb(230,230,230) 1%, rgb(240,240,240) 99%) */
 }
 
 .gamemode:hover {
-  background-image: -webkit-linear-gradient(bottom, rgb(50, 50, 50) 1%, rgb(50, 50, 50) 99%); /* -webkit-linear-gradient(bottom, rgb(250,230,150) 1%, rgb(250,250,150) 99%) */
+  background-image: -webkit-linear-gradient(bottom, rgb(50, 50, 50) 1%, rgb(50, 50, 50) 99%);
+  /* -webkit-linear-gradient(bottom, rgb(250,230,150) 1%, rgb(250,250,150) 99%) */
 }
 
 .gamemode .name {
@@ -31,11 +34,13 @@
   top: 5px;
   font-size: 20px;
   white-space: nowrap;
-  color: #DDD; /* added */
+  color: #DDD;
+  /* added */
 }
 
 .gamemode .name tag {
-  background: #444; /* #1A8CFF */
+  background: #444;
+  /* #1A8CFF */
   color: #FFF;
   padding: 1px 12px;
   padding-bottom: 2px;
@@ -48,8 +53,10 @@
 
 .gamemode .stats {
   text-align: right;
-  font-size: 12px; /* 11px */
-  color: #888; /* #555 */
+  font-size: 12px;
+  /* 11px */
+  color: #888;
+  /* #555 */
   position: absolute;
   bottom: 3px;
   left: 43px;
@@ -77,7 +84,8 @@ h1 small {
   bottom: 0px;
   left: 0px;
   right: 320px;
-  background-color: #111; /* white */
+  background-color: #111;
+  /* white */
   padding: 10px;
   border-radius: 4px;
 }
@@ -178,34 +186,42 @@ h1 small {
 
 .serverlist .server {
   height: 16px;
-  background-color: #222; /* #E7F0FF */
+  background-color: #222;
+  /* #E7F0FF */
   padding: 3px;
-  color: #DDD; /* #444 */
+  color: #DDD;
+  /* #444 */
   cursor: pointer;
 }
 
 .serverlist .server:nth-child(odd) {
-  background-color: #333; /* #F1F6FF */
+  background-color: #333;
+  /* #F1F6FF */
 }
 
 .serverlist .empty {
-  color: #999; /* #777 */
+  color: #999;
+  /* #777 */
 }
 
 .serverlist .missingmap map {
-  color: #F99; /* #955 */
+  color: #F99;
+  /* #955 */
 }
 
 .serverlist .empty players {
-  color: #99F; /* #DAA */
+  color: #99F;
+  /* #DAA */
 }
 
 .serverlist .server:hover {
-  background-color: #444; /* #B7DDFD */
+  background-color: #444;
+  /* #B7DDFD */
 }
 
 .serverlist .header {
-  background-color: #555; /* #6AF */
+  background-color: #555;
+  /* #6AF */
   height: 30px;
   position: absolute;
   border-radius: 4px 4px 0 0;
@@ -231,7 +247,8 @@ h1 small {
 .serverlist .header rank {
   font-size: 11px;
   font-weight: normal;
-  color: #DDD; /* #FFF */
+  color: #DDD;
+  /* #FFF */
   text-align: center;
   cursor: pointer;
 }
@@ -282,19 +299,23 @@ h1.menuheader small {
 }
 
 a.bglink {
-  color: #DDD; /* white */
+  color: #DDD;
+  /* white */
   font-weight: bold;
-  background-color: #111; /* #5AF */
+  background-color: #111;
+  /* #5AF */
   padding: 8px 10px;
   border-radius: 2px;
   display: inline-block;
   font-size: 14px;
   margin-top: 4px;
-  position: absolute; /*hack to make it appear over the search bar*/
+  position: absolute;
+  /*hack to make it appear over the search bar*/
 }
 
 a.bglink:hover {
-  background-color: #555; /* added */
+  background-color: #555;
+  /* added */
 }
 
 .serverinfo {
@@ -303,7 +324,8 @@ a.bglink:hover {
   bottom: 0px;
   width: 280px;
   right: 0px;
-  background-color: #111; /* white */
+  background-color: #111;
+  /* white */
   padding: 10px 15px;
   border-radius: 4px;
 }
@@ -316,7 +338,8 @@ a.bglink:hover {
   overflow: hidden;
   width: 100%;
   letter-spacing: -1px;
-  color: #DDD; /* added */
+  color: #DDD;
+  /* added */
 }
 
 .serverinfo button {
@@ -328,12 +351,14 @@ a.bglink:hover {
   text-align: left;
   font-size: 12px;
   user-select: text;
-  color: #DDD; /* added */
+  color: #DDD;
+  /* added */
 }
 
 .serverinfo subinfo {
   display: block;
-  color: #DDD; /* #444 */
+  color: #DDD;
+  /* #444 */
 }
 
 .serverinfo>div {
@@ -355,25 +380,31 @@ a.bglink:hover {
 .serverinfo players {
   display: block;
   height: 100%;
-  background-color: #222; /* #EEE */
+  background-color: #222;
+  /* #EEE */
   border-radius: 4px;
   overflow: auto;
 }
 
 .serverinfo players .ng-scope {
-  max-width: 170px; /* added */
-  overflow: hidden; /* added */
-  color: #AAA; /* added */
+  max-width: 170px;
+  /* added */
+  overflow: hidden;
+  /* added */
+  color: #AAA;
+  /* added */
 }
 
 .serverinfo players .pname {
   max-width: 170px;
   overflow: hidden;
-  color: #AAA; /* added */
+  color: #AAA;
+  /* added */
 }
 
 .serverinfo players table tr:nth-child(1) {
-  color: #DDD !important; /* added */
+  color: #DDD !important;
+  /* added */
 }
 
 @media screen and (max-width: 900px) {
@@ -392,19 +423,26 @@ a.bglink:hover {
   width: 100%;
   padding: 4px;
   margin-bottom: 5px;
-  background-color: #444; /* added */
-  border-width: 2px; /* added */
-  border-style: solid; /* added */
-  border-radius: 2px; /* added */
-  border-color: #222 #666 #666 #222; /* added */
+  background-color: #444;
+  /* added */
+  border-width: 2px;
+  /* added */
+  border-style: solid;
+  /* added */
+  border-radius: 2px;
+  /* added */
+  border-color: #222 #666 #666 #222;
+  /* added */
 }
 
 .serverinfo footer input[type=password]:focus {
-  border-color: #666 #AAA #AAA #666; /* added */
+  border-color: #666 #AAA #AAA #666;
+  /* added */
 }
 
 .activeserver {
-  background-color: #666 !important; /* #FFA !important */
+  background-color: #666 !important;
+  /* #FFA !important */
 }
 
 div.installgamemode {
@@ -413,9 +451,11 @@ div.installgamemode {
   line-height: 26px;
   font-size: 24px;
   font-weight: bold;
-  background-color: #111; /* #5AF */
+  background-color: #111;
+  /* #5AF */
   text-align: center;
-  color: #DDD; /* white */
+  color: #DDD;
+  /* white */
   padding: 5px;
   border-radius: 5px;
   position: absolute;
@@ -424,12 +464,14 @@ div.installgamemode {
   border: 2px solid #111;
   z-index: 100;
   cursor: pointer;
-  background: #111 url('../../img/gm_install32.png') no-repeat 6px center; /* #5AF url('../../img/gm_install32.png') no-repeat 6px center */
+  background: #111 url('../../img/gm_install32.png') no-repeat 6px center;
+  /* #5AF url('../../img/gm_install32.png') no-repeat 6px center */
   padding-left: 36px;
 }
 
 div.installgamemode:hover {
-  background-color: #555; /* #7CF */
+  background-color: #555;
+  /* #7CF */
 }
 
 span.installgamemode {
@@ -439,21 +481,25 @@ span.installgamemode {
   bottom: 0px;
   border-radius: 0 4px 4px 0;
   cursor: pointer;
-  background: #444 url('../../img/gm_install16.png') no-repeat 13px center; /* #5AF url('../../img/gm_install16.png') no-repeat 13px center */
+  background: #444 url('../../img/gm_install16.png') no-repeat 13px center;
+  /* #5AF url('../../img/gm_install16.png') no-repeat 13px center */
   width: 42px;
 }
 
 span.installgamemode:hover {
-  background-color: #666; /* #7CF */
+  background-color: #666;
+  /* #7CF */
 }
 
 .server_gamemodes {
   top: 64px;
-  border: 5px solid #111; /* 5px solid white */
+  border: 5px solid #111;
+  /* 5px solid white */
 }
 
 .whiterounded {
-  background-color: #111; /* added */
+  background-color: #111;
+  /* added */
 }
 
 @media screen and (min-width: 1280px) {
@@ -469,14 +515,13 @@ span.installgamemode:hover {
 }
 
 /* Server search box */
-.controls .searchbox
-{
-border-radius: 2px;
-margin-top: 4px;
-padding: 7px 10px;
-height: auto;
-width: 15%;
-min-width: 150px;
+.controls .searchbox {
+  border-radius: 2px;
+  margin-top: 4px;
+  padding: 7px 10px;
+  height: auto;
+  width: 15%;
+  min-width: 150px;
 }
 
 .gmfilter_rev {
@@ -502,7 +547,8 @@ min-width: 150px;
 }
 
 input[type=number]::-webkit-inner-spin-button {
-  -webkit-appearance: none; /*Unfortunately padding looks bad in CEF for these*/
+  -webkit-appearance: none;
+  /*Unfortunately padding looks bad in CEF for these*/
 }
 
 .flags_filter {
@@ -510,7 +556,8 @@ input[type=number]::-webkit-inner-spin-button {
   margin-top: 5px;
   background: #4E4E4E;
   padding: 4px;
-  padding-bottom: 0px; /*Done by the flags*/
+  padding-bottom: 0px;
+  /*Done by the flags*/
   border-radius: 4px;
   text-align: center;
 }
@@ -600,7 +647,8 @@ input[type=number]::-webkit-inner-spin-button {
   }
 
   .serverlist map {
-    right: 100px; /*overlaps but its 640x480*/
+    right: 100px;
+    /*overlaps but its 640x480*/
     width: 56px;
   }
 
