--- a/Dark Mode/html/css/creations/Creations.css
+++ b/Dark Mode/html/css/creations/Creations.css
@@ -180,8 +180,10 @@ workshopmessage {
 }
 
 .options ul {
-  background-color: #111; /* #5BF */
-  border: 3px solid #444; /* 3px solid #FFF */
+  background-color: #111;
+  /* #5BF */
+  border: 3px solid #444;
+  /* 3px solid #FFF */
   margin: 8px;
   border-radius: 6px;
   list-style: none;
@@ -204,7 +206,8 @@ workshopmessage {
   font-weight: bolder;
   letter-spacing: -2px;
   border-radius: 4px 4px 0 0;
-  color: #DDD; /* #FFF */
+  color: #DDD;
+  /* #FFF */
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
 }
 
