--- a/Dark Mode/html/css/menu/NewGame.css
+++ b/Dark Mode/html/css/menu/NewGame.css
@@ -39,8 +39,10 @@ ul.category li.mapicon {
   margin: 2px;
   cursor: pointer;
   vertical-align: top;
-  color: #777; /* added */
-  overflow: hidden; /* added */
+  color: #777;
+  /* added */
+  overflow: hidden;
+  /* added */
 }
 
 ul.category li.mapicon span {
@@ -53,7 +55,8 @@ ul.category li.mapicon span {
   left: 16px;
   bottom: 16px;
   position: absolute;
-  background-color: #111; /* white */
+  background-color: #111;
+  /* white */
   border-radius: 5px;
   padding: 10px;
 }
@@ -67,9 +70,11 @@ ul.category li.mapicon span {
 }
 
 ul.category li.mapicon.selected {
-  background-color: #444; /* #97C5FF */
+  background-color: #444;
+  /* #97C5FF */
   border-radius: 3px;
-  color: #DDD; /* added */
+  color: #DDD;
+  /* added */
 }
 
 gamesettings {
@@ -78,7 +83,8 @@ gamesettings {
   width: 226px;
   bottom: 16px;
   position: absolute;
-  background-color: #111; /* white */
+  background-color: #111;
+  /* white */
   border-radius: 5px;
 }
 
@@ -119,10 +125,14 @@ gamesettings select {
   line-height: 28px;
   cursor: pointer;
   font-weight: bold;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#666), to(#222)); /* -webkit-gradient(linear, 0 0, 0 100%, from(#5C5), to(#2C2)) */
-  border: 1px solid #222; /* 1px solid #CCC */
-  border-color: #222; /* #2A2 #2A2 #181 */
-  color: #DDD; /* white */
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#666), to(#222));
+  /* -webkit-gradient(linear, 0 0, 0 100%, from(#5C5), to(#2C2)) */
+  border: 1px solid #222;
+  /* 1px solid #CCC */
+  border-color: #222;
+  /* #2A2 #2A2 #181 */
+  color: #DDD;
+  /* white */
   cursor: pointer;
   vertical-align: middle;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
@@ -133,14 +143,17 @@ gamesettings select {
   left: 0;
   right: 0;
   top: 31px;
-  background-color: #222; /* #FFF */
+  background-color: #222;
+  /* #FFF */
   border-radius: 4px;
-  border: 1px solid #222; /* 1px solid #AAA */
+  border: 1px solid #222;
+  /* 1px solid #AAA */
   display: none;
   cursor: pointer;
   font-size: 13px;
   -webkit-box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-  color: #DDD; /* added */
+  color: #DDD;
+  /* added */
 }
 
 .dropdown .contents div {
@@ -148,14 +161,16 @@ gamesettings select {
 }
 
 .dropdown .contents div:hover {
-  background-color: #666; /* #ACF */
+  background-color: #666;
+  /* #ACF */
 }
 
 .caret {
   width: 0;
   height: 0;
   vertical-align: top;
-  border-top: 5px solid #DDD; /* 5px solid white */
+  border-top: 5px solid #DDD;
+  /* 5px solid white */
   border-right: 5px solid transparent;
   border-left: 5px solid transparent;
   content: "";
@@ -170,7 +185,8 @@ gamesettings .control {
 
 gamesettings .control label {
   font-size: 11px;
-  color: #888; /* #666 */
+  color: #888;
+  /* #666 */
 }
 
 gamesettings .control:not(.control-numeric) label {
@@ -185,15 +201,21 @@ gamesettings .control-numeric label {
 gamesettings .control input[type=text] {
   width: 100%;
   padding: 4px;
-  color: #DDD; /* added */
-  background-color: #444; /* added */
-  border-width: 2px; /* added */
-  border-style: solid; /* added */
-  border-color: #222 #666 #666 #222; /* added */
+  color: #DDD;
+  /* added */
+  background-color: #444;
+  /* added */
+  border-width: 2px;
+  /* added */
+  border-style: solid;
+  /* added */
+  border-color: #222 #666 #666 #222;
+  /* added */
 }
 
 gamesettings .control input[type=text]:focus {
-  border-color: #666 #AAA #AAA #666; /* added */
+  border-color: #666 #AAA #AAA #666;
+  /* added */
 }
 
 gamesettings .control-numeric {
@@ -240,7 +262,8 @@ gamesettings .control-numeric input[type=text] {
 }
 
 .controls .search input:focus {
-  border-color: #666 #AAA #AAA #666; /* added */
+  border-color: #666 #AAA #AAA #666;
+  /* added */
 }
 
 .controls ul {
@@ -253,25 +276,31 @@ gamesettings .control-numeric input[type=text] {
   right: 0;
   top: 0;
   bottom: 32px;
-  color: #DDD; /* added */
+  color: #DDD;
+  /* added */
 }
 
 .controls li.category {
-  background-color: #444; /* #DDD */
+  background-color: #444;
+  /* #DDD */
   margin: 0;
   margin-bottom: 5px;
-  font-size: 12px; /* 11px */
+  font-size: 12px;
+  /* 11px */
   font-weight: bold;
   border-radius: 3px;
-  color: #DDD; /* #555 */
+  color: #DDD;
+  /* #555 */
   height: 26px;
   cursor: pointer;
   position: relative;
 }
 
 .controls li.active {
-  background-color: #666; /* #9CF */
-  color: #DDD; /* #333 */
+  background-color: #666;
+  /* #9CF */
+  color: #DDD;
+  /* #333 */
 }
 
 .controls li.category .name {
@@ -282,16 +311,19 @@ gamesettings .control-numeric input[type=text] {
   right: 32px;
   overflow: hidden;
   white-space: nowrap;
-  color: #DDD; /* added */
+  color: #DDD;
+  /* added */
 }
 
 .controls li.category .count {
   float: right;
-  background-color: #111; /* #FFF */
+  background-color: #111;
+  /* #FFF */
   border-radius: 3px;
   padding: 2px 5px;
   margin: 5px;
-  color: #DDD; /* #AAA */
+  color: #DDD;
+  /* #AAA */
   font-size: 10px;
   overflow: hidden;
   white-space: nowrap;
