--- a/Dark Mode/html/css/Workshop.css
+++ b/Dark Mode/html/css/Workshop.css
@@ -8,6 +8,7 @@ workshopicon {
   background-color: #333; /* #666 */
   background-position: center;
   -webkit-box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.3);
   border-radius: 3px;
   border: 3px solid #666; /* 3px solid white */
 }
@@ -37,12 +38,14 @@ workshopicon controls {
   z-index: 10;
   bottom: -32px;
   -webkit-transition: bottom 100ms ease-in 0ms;
+  transition: bottom 100ms ease-in 0ms;
 }
 
 workshopicon:hover controls {
   opacity: 1;
   bottom: 0px;
   -webkit-transition: bottom 100ms ease-in 200ms;
+  transition: bottom 100ms ease-in 200ms;
 }
 
 workshopicon name {
@@ -117,18 +120,21 @@ workshopicon author,
 workshopicon size {
   right: 0px;
   -webkit-transition: right 100ms ease-out 200ms;
+  transition: right 100ms ease-out 200ms;
 }
 
 workshopicon:hover author,
 workshopicon:hover size {
   right: -200px;
   -webkit-transition: right 100ms ease-in 0ms;
+  transition: right 100ms ease-in 0ms;
 }
 
 workshopicon votes {
   left: 0px;
   color: #4a4;
   -webkit-transition: left 100ms ease-out 200ms;
+  transition: left 100ms ease-out 200ms;
 }
 
 workshopicon votes.negative {
@@ -138,6 +144,7 @@ workshopicon votes.negative {
 workshopicon:hover votes {
   left: -200px;
   -webkit-transition: left 100ms ease-in 0ms;
+  transition: left 100ms ease-in 0ms;
 }
 
 workshopicon votes {
@@ -162,6 +169,7 @@ workshopicon description {
   word-break: break-all;
   opacity: 0;
   -webkit-transition: opacity 100ms ease-in 0ms;
+  transition: opacity 100ms ease-in 0ms;
 }
 
 workshopicon .checkbox {
@@ -178,6 +186,7 @@ workshopicon:hover description {
   display: inherit;
   opacity: 1;
   -webkit-transition: opacity 50ms ease-in 0ms;
+  transition: opacity 50ms ease-in 0ms;
 }
 
 workshopmessage {
@@ -225,6 +234,7 @@ controls control {
   cursor: pointer;
   height: 15px;
   -webkit-box-shadow: 1px 1px 2px black;
+  box-shadow: 1px 1px 2px black;
   position: relative;
   color: #DDD; /* added */
 }
