--- a/Dark Mode/html/css/creations/Creations.css
+++ b/Dark Mode/html/css/creations/Creations.css
@@ -3,6 +3,7 @@ body {
   background-color: transparent;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   -webkit-user-select: none;
+  user-select: auto;
   margin: 0;
   padding: 0;
   font-size: 12px;
@@ -10,6 +11,7 @@ body {
 
 input {
   -webkit-user-select: auto;
+  user-select: auto;
   font-size: 12px;
 }
 
@@ -65,6 +67,7 @@ ul.category li.icon {
   cursor: pointer;
   vertical-align: middle;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
 .btn-primary:hover {
@@ -81,6 +84,7 @@ ul.category li.icon {
   cursor: pointer;
   vertical-align: middle;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
   height: 24px;
 }
 
@@ -91,6 +95,7 @@ ul.category li.icon {
 div.gridicon {
   position: relative;
   -webkit-background-size: cover;
+  background-size: cover;
   height: 100px;
   width: 300px;
   float: left;
@@ -195,6 +200,7 @@ workshopmessage {
   margin: 0px;
   border-radius: 2px;
   -webkit-transition: all 0.2s;
+  transition: all 0.2s;
   color: #FFF;
   font-weight: bold;
 }
