--- a/Dark Mode/html/css/menu/NewGame.css
+++ b/Dark Mode/html/css/menu/NewGame.css
@@ -136,6 +136,7 @@ gamesettings select {
   cursor: pointer;
   vertical-align: middle;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
 .dropdown .contents {
@@ -152,6 +153,7 @@ gamesettings select {
   cursor: pointer;
   font-size: 13px;
   -webkit-box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
   color: #DDD;
   /* added */
 }
